[package]
name = "rttp"
description = "RTTP: Sub-millisecond Neural Transport Protocol & Stateful Semantic Multicast [RFC-002]"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "http://rttp.com"
documentation = "https://github.com/Aicent-Stack/manifesto/blob/main/rfcs/RFC-002-RTTP-NERVES.md"
keywords = ["neural-transport", "low-latency", "rfc-002", "pulse-frame", "multicast"]
categories = ["network-programming", "asynchronous", "embedded"]
rust-version = "1.75"

[dependencies]
# --- Core Neural Transport Primitives (L0 Backbone) ---
# RTTP acts as the foundational physical layer. Higher-order functions 
# like Immunity (RPKI) and Blood (ZCMK) are integrated via the Orchestration Layer
# to maintain a strict, unidirectional architectural dependency graph.

serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
# [PERF] Zero-copy buffer management critical for 64-byte Pulse Frames
bytes = { workspace = true, features = ["serde"] }
# [PERF] Stack-allocated pulse fragments to prevent heap-jitter
smallvec = { workspace = true, features = ["serde"] }

# --- High-Performance Asynchronous Routing ---
tokio = { workspace = true, features = ["net", "rt", "sync"] }
# Lock-free shunting for nanosecond dispatch between neural nodes
crossbeam = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-queue = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true } # Industrial-grade telemetry for nervous impulses

# --- Hardware Affinity ---
# [RFC-005] Pre-configured for Embassy executor for hard real-time loops
embassy-executor = { workspace = true, optional = true }

[dev-dependencies]
# Performance benchmarking for <420µs sync targets
criterion = { workspace = true }
