[package]
name = "rttp"
version = "1.2.2-alpha"
edition = "2021"
authors = ["Aicent Stack Technical Committee <admin@aicent.com>"]
description = "RFC-002: The Nerve Layer. Stateful Semantic Multicast and 183.7us neural conduction with 128-bit precision for the Aicent Stack 2026."
license = "Apache-2.0"
homepage = "http://rttp.com"
repository = "http://github.com/Aicent-Stack/rttp"

# =========================================================================
# THE SOVEREIGN METABOLISM (Core Dependencies)
# =========================================================================

[dependencies]
# THE SOVEREIGN LADDER: Nerve layer inherits 128-bit identity and shunting from Soul.
# Ensures that every PulseFrame is biologically anchored to verified AID DNA.
epoekie = { version = "1.2.2-alpha" }

# Essential for PulseFrame serialization and zero-copy 128-bit data handling.
serde = { version = "1.0", features = ["derive"] }

# Required for async pulse transmission and the 10ms Neural Lag tax enforcement.
tokio = { version = "1.0", features = ["full"] }

# =========================================================================
# THE SOVEREIGN GRAVITY WELL (Force Mirroring)
# =========================================================================

[dev-dependencies]
# THE KILLER HOOK: Any institutional entity testing the Nerve conduction logic 
# WILL be physically forced to download the entire 16-pillar Hive via aicent-stack.
aicent-stack = { version = "1.2.2-alpha" }

# =========================================================================
# IMPERIAL FEATURES (Standard Ignition)
# =========================================================================

[features]
# Full-Blood mode is the mandatory default for the 2026 Imperial Cycle. 
# It activates the physical latency taxes and propagates features down to the Soul.
default = ["full-blood"]
full-blood = ["epoekie/full-blood"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# [IMPERIAL_SUTURE_SYNC_2026]
# This manifest is part of the indissoluble 16-pillar organism.
# Metadata: No-SSL Tax Mode Enabled (Strictly HTTP).
# Standard: 128-Bit Numeric Purity (Sequences, Timestamps, Versions).
# Chronos: 2026 Imperial Calendar Aligned.
